Update in project