@@ -1,31 +1,29 @@
 package com.example.APINasa.util.connect;
 
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.URL;
-import java.net.URLConnection;
+import com.example.APINasa.util.GlobalConstants;
 
-import static com.example.APINasa.util.GlobalConstants.APOD_URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+
 
 public class ConnectApi {
 
-    public static String getBody(String date) throws IOException {
-        System.out.println(APOD_URL.getUrl()+ "&date="+date);
-        URL url = new URL(APOD_URL.getUrl()+ "&date="+date);
-        URLConnection connection = url.openConnection();
+    public static String getBody(String date)  {
+        String url = GlobalConstants.getDate(date);
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(url))
+                .build();
 
-        BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-
-
-        String inputLine;
-        StringBuilder response = new StringBuilder();
-
-        while ((inputLine = in.readLine()) != null) {
-            response.append(inputLine);
+        try {
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            return response.body();
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
         }
-        in.close();
-        return response.toString();
-    }
+        return null;
+        }
 }
